k8s/base/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.httponly: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.samesite: "lax"
spec:
  type: ClusterIP
  selector:
    app: petclinic
  ports:
    - name: http
      port: 80
      targetPort: 8080
