k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: petclinic
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
